Fix the background image on mobile devices.
The background image had width: 100%, which refers to the initial view port.
When zoomed out, this is less than the width of the content pane (970px).

By adding min-width:970px to the background and the background-city, this
problem can be solved.

--- a/src/herobase/static/less/custom.less
+++ b/src/herobase/static/less/custom.less
@@ -460,6 +460,7 @@ body.city-karlsruhe {
   color:  @grayDark;
   #background {
     width:  100%;
+    min-width: @gridRowWidth;
     height: 1044px;
     position: absolute;
     top: 0;
@@ -472,6 +473,7 @@ body.city-karlsruhe {
     background: url("../img/stadt.png") repeat-x scroll 50% 0 transparent;
 //    background-size: 100%;
     width: 100%;
+    min-width: @gridRowWidth;
     height: 410px;
     position: absolute;
     left:  0;
